--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
       
     <div class="d-flex justify-content-center">
-        <img src="imagenes/foto1.jpg" class="img-fluid" alt="...">
+        <img src="imagenes/foto1.jpg" class="img-fluid" alt="..." width="50%">
     </div>
 
     <h1 class="titulo">Elegí tus cubanitos favoritos</h1>
@@ -118,7 +118,7 @@
               <h4>Titulo</h4>
               <h5>descripción</h5>
               <p>precio</p>
-              <button class="btn btn-dark">Agregar</button>
+              <button class="btn btn-agregar">Agregar</button>
             </div>
           </div>
         </div>
