--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
 
     <div class="container">
-        <h3>CARRITO DE COMPRAS</h3>
+        <h3>TU PEDIDO</h3>
         <table class="table">
           <thead>
             <tr>
